Add basic Dovecot container.
Add the basics for what will eventually be the Dovecot container. 10-master.conf, 10-ssl.conf, and dovecot-sql.conf.ext have to be modified to allow Dovecot to interact with the database and communicate with the Postfix container. SSL configuration will probably be left for after a working database connection and a communication with Postfix is successfully established.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build: postfix
     volumes:
       - virtualdb:/etc/postfix/virtualdb
+  dovecot:
+    build: dovecot
 volumes:
   virtualdb: {}
