Add Dovecot/Postfix communication config.
Write 10-master.conf and dovecot-sql.conf.ext to allow Postfix to use Dovecot for auth and to allow Dovecot to use virtualdb. 10-ssl.conf will be configured later.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       - virtualdb:/etc/postfix/virtualdb
   dovecot:
     build: dovecot
+    volumes:
+      - virtualdb:/etc/dovecot/virtualdb
 volumes:
   virtualdb: {}
