--- a/dovecot/dovecot/conf.d/10-master.conf
+++ b/dovecot/dovecot/conf.d/10-master.conf
@@ -97,16 +97,12 @@ service auth {
   # To give the caller full permissions to lookup all users, set the mode to
   # something else than 0666 and Dovecot lets the kernel enforce the
   # permissions (e.g. 0777 allows everyone full permissions).
-  unix_listener auth-userdb {
-    #mode = 0666
-    #user =
-    #group =
-  }
 
   # Postfix smtp-auth
-  #unix_listener /var/spool/postfix/private/auth {
-  #  mode = 0666
-  #}
+  inet_listener auth {
+    address = *
+    port = 7727
+  }
 
   # Auth process is run as this user.
   #user = $default_internal_user
