Add missing Dovecot extensions and configure LMTP.
Allow Postfix to send received emails to Dovecot over LMTP to be stored to disk.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     build: postfix
     volumes:
       - virtualdb:/etc/postfix/virtualdb
+      - private:/var/spool/postfix/private
   dovecot:
     build: dovecot
     volumes:
       - virtualdb:/etc/dovecot/virtualdb
+      - private:/var/spool/postfix/private
 volumes:
   virtualdb: {}
+  private: {}
