--- a/dovecot/dovecot/conf.d/10-master.conf
+++ b/dovecot/dovecot/conf.d/10-master.conf
@@ -52,16 +52,9 @@ service submission-login {
 }
 
 service lmtp {
-  unix_listener lmtp {
-    #mode = 0666
+  unix_listener /var/spool/postfix/private/dovecot-lmtp {
+    mode = 0777
   }
-
-  # Create inet listener only if you can't use the above UNIX socket
-  #inet_listener lmtp {
-    # Avoid making LMTP visible for the entire internet
-    #address =
-    #port =
-  #}
 }
 
 service imap {
@@ -99,9 +92,8 @@ service auth {
   # permissions (e.g. 0777 allows everyone full permissions).
 
   # Postfix smtp-auth
-  inet_listener auth {
-    address = *
-    port = 7727
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0777
   }
 
   # Auth process is run as this user.
