Add database initialization script.
Previously, the user would have to initialize the database in the volume, or Postfix would simply fail to receive emails. Now a script is run every time the Postfix container is run which initializes the database file if necessary.

--- a/postfix/Dockerfile
+++ b/postfix/Dockerfile
@@ -1,10 +1,17 @@
 FROM alpine:latest
 
 # Install Postfix.
-RUN apk add postfix postfix-sqlite
+RUN apk add postfix postfix-sqlite sqlite
 
 # Copy over config files.
 COPY postfix/* /etc/postfix/
+
+# Copy over start script and make executable.
+COPY start.sh /usr/bin/
+RUN chmod +x /usr/bin/start.sh
+
+# Copy over database initialization script.
+COPY init.sql .
 
 # Configure Postfix to use the SQLite database.
 RUN postconf virtual_mailbox_domains=sqlite:/etc/postfix/sqlite-virtual-mailbox-domains.cf && \
@@ -13,5 +20,5 @@ RUN postconf virtual_mailbox_domains=sqlite:/etc/postfix/sqlite-virtual-mailbox-
 
 RUN postconf virtual_transport=lmtp:unix:private/dovecot-lmtp
 
-# Start Postfix.
-CMD ["postfix", "start-fg"]
+# Initialize database and start Postfix.
+CMD ["start.sh"]
